feat: add product loading and display to the frontend (without styling)